# DigAgent

./: .env.example  .gitignore  README.md  pyproject.toml  reference.md  requirements.txt
.agents/mcp/: fixture-mcp.yaml  github.yaml  playwright-local.yaml  playwright.yaml  shodan.yaml
.agents/memory/: active.md  project.md
config/agents/: hackey-ctf.yaml  hephaestus-deepworker.yaml  memory-curator.yaml  prometheus-planner.yaml  report-writer.yaml  sisyphus-default.yaml
config/prompts/: hackey.md  hephaestus.md  memory-curator.md  prometheus.md  report-writer.md  sisyphus.md
data/: langgraph-checkpoints.sqlite  langgraph-checkpoints.sqlite-shm  langgraph-checkpoints.sqlite-wal
data/CVE/: state.json
docs/: PPT主稿.md  审批通路大改计划.md  技术报告.md  答辩备份资料.md  项目设计.md
src/digagent/: api.py  (+19 more)
tests/: __init__.py  conftest.py  helpers.py  live_helpers.py  runtime_import_stubs.py  runtime_turn_fakes.py  test_agent_routing_and_replan.py  test_config_profiles.py  test_ctf_skill_catalog.py  test_cve_and_api_extensions.py  test_cve_service.py  test_deepagents_api.py  test_deepagents_auto_approve_live.py  test_deepagents_cli.py  test_deepagents_runtime.py  test_deepagents_runtime_catalog.py  test_project_tools_runtime.py  test_report_export_tool.py  test_runtime_acceptance.py  test_scheduler_and_manifest.py  test_security.py  test_session_routing.py  test_turn_api.py  test_turn_api_contracts.py  test_turn_runtime_manager.py  test_turn_storage_contracts.py  turn_test_utils.py
webui/: index.html  package-lock.json  package.json  render-pdf.mjs  tailwind.config.js  vite.config.js
(+174 files in other folders)
