[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "digagent"
version = "0.1.0"
description = "Controlled security analysis agent with CLI and WebUI."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Codex" }]
dependencies = [
  "deepagents>=0.5.3",
  "langchain>=1.2.15",
  "langchain-mcp-adapters>=0.2.2",
  "langgraph>=1.1.6",
  "langgraph-checkpoint-sqlite>=3.0.3",
  "langchain-openai>=1.0.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.0",
  "python-dotenv>=1.0.1",
  "PyYAML>=6.0.2",
  "httpx>=0.28.1",
  "fastapi>=0.115.0",
  "python-multipart>=0.0.26",
  "uvicorn>=0.34.0",
  "jinja2>=3.1.4",
  "markdown-it-py>=3.0.0",
  "typer>=0.16.0",
  "rich>=14.0.0",
  "anyio>=4.13.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.4.0",
  "pytest-asyncio>=0.26.0",
]

[project.scripts]
digagent = "digagent.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/digagent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
